gccida/g2/modified_type_die
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/modified_type_die/src/dwarf2out.c:7942:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/modified_type_die/src/dwarf2out.c:7952:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/modified_type_die/src/dwarf2out.c:8162:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 7381, "base_type_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/modified_type_die/src/dwarf2out.c:8188:19: error: no member named 'die_parent' in 'struct ht'
debug_str_hash[1].die_parent = ( dw_die_ref)indirect_string_alloc; 
~~~~~~~~~~~~~~~~~ ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/modified_type_die/src/dwarf2out.c:8258:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 7573, "modified_type_die"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/modified_type_die/src/dwarf2out.c:8261:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 7461, "is_base_type"); 
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/modified_type_die/src/obj/dwarf2out.o] Error 1
